# nl2sqldemo

./: .env.example  .gitignore  JENKINS_DEPLOY.md  README.md  README_STREAMLIT.md  SERVICES.md  agent_client.py  deploy.sh  health_check.sh  langgraph.json  pyproject.toml  requirements.txt  run_api.sh  run_streamlit.sh  start_services.sh  stop_services.sh  streamlit_app.py  test_case_simple_agent.mmd  test_local_llm.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
api/: main.py  routes.py
api/schema/: __init__.py  chat_message.py  user_input.py
api/utils/: message_utils.py
source/agent/: agent.py  agent2.py  deepseek_patch.py  llm.py  llm_wrapper.py  prompts.py  sql_agent.py  test01.py  test_case_simple_agent.py  test_simple_agent.py  格式化输出1.py
source/agent/tools/: tool_excel_generator.py  tool_sql_table_list.py  tool_websearch1.py  tool_websearch2.py  tool_word_parser.py
source/agent/utils/: db_utils.py  message_converter.py
